--- a/Inicio.html
+++ b/Inicio.html
@@ -19,7 +19,7 @@
 
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">Inicio</a>
+                <a href="Inicio.html" class="nav-link active" aria-current="page">Inicio</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
@@ -32,7 +32,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Another link</a>
+                <a href="Contactenos.html" class="nav-link">Contactenos</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link disabled">Disabled</a>
