--- a/Inicio.html
+++ b/Inicio.html
@@ -23,12 +23,12 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    aria-haspopup="true" aria-expanded="false">Mas</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Viajes</a>
+                    <a class="dropdown-item" href="#">Planes</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Acerca de</a>
                 </div>
             </li>
             <li class="nav-item">
