--- a/Inicio.html
+++ b/Inicio.html
@@ -25,7 +25,7 @@
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                     aria-haspopup="true" aria-expanded="false">Mas</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Viajes</a>
+                    <a class="dropdown-item" href="Viajes.html">Viajes</a>
                     <a class="dropdown-item" href="#">Planes</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Acerca de</a>
