--- a/Contactenos.html
+++ b/Contactenos.html
@@ -11,23 +11,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="EstilosContactenos.css">
+
 </head>
 
 <body>
     <header>
         <!-- place navbar here -->
+        <h1 class="banner">Cheap Flights <img src="IMG/icon/planes.png" alt=""></h1>
+
         <ul class="nav nav-tabs">
             <li class="nav-item">
                 <a href="Inicio.html" class="nav-link active" aria-current="page">Inicio</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    aria-haspopup="true" aria-expanded="false">Mas</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="Viajes.html">Viajes</a>
+                    <a class="dropdown-item" href="#">Planes</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Acerca de</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -83,8 +87,8 @@
                             </div>
 
                             <button type="submit" class="btn btn-primary">Submit</button>
-                            
-                            
+
+
                             <button type="reset" class="btn btn-primary">Reset</button>
                         </form>
                     </div>
@@ -98,8 +102,23 @@
 
 
     </main>
-    <footer>
+    <footer class="footer bg-light">
         <!-- place footer here -->
+        <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <p class="footer-text">Encuentra las mejores ofertas de vuelos en nuestra página. ¡No pierdas la oportunidad de viajar por el mundo a precios increíbles!</p>
+              </div>
+              <div class="col-md-4">
+                <p class="footer-text">¡Suscríbete a nuestro boletín y mantente al tanto de nuestras promociones exclusivas!</p>
+              </div>
+              <div class="col-md-4">
+                <p class="footer-text">¿Necesitas ayuda? Contáctanos en nuestro servicio de atención al cliente disponible las 24 horas, los 7 días de la semana.</p>
+              </div>
+            </div>
+            <hr>
+            <p class="footer-copy">&copy; 2023 Cheap Flights. Todos los derechos reservados.</p>
+          </div>
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
