--- a/Inicio.html
+++ b/Inicio.html
@@ -26,7 +26,7 @@
                     aria-haspopup="true" aria-expanded="false">Mas</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="Viajes.html">Viajes</a>
-                    <a class="dropdown-item" href="#">Planes</a>
+                    <a class="dropdown-item" href="Planes.html">Planes</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Acerca de</a>
                 </div>
