--- a/Contactenos.html
+++ b/Contactenos.html
@@ -29,7 +29,7 @@
                     aria-haspopup="true" aria-expanded="false">Mas</a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="Viajes.html">Viajes</a>
-                    <a class="dropdown-item" href="#">Planes</a>
+                    <a class="dropdown-item" href="Planes.html">Planes</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Acerca de</a>
                 </div>
@@ -37,9 +37,7 @@
             <li class="nav-item">
                 <a href="Contactenos.html" class="nav-link">Contactenos</a>
             </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link disabled">Disabled</a>
-            </li>
+            
         </ul>
     </header>
     <main>
