--- a/Planes.html
+++ b/Planes.html
@@ -15,6 +15,8 @@
 
 <body>
   <header>
+    <h1 class="banner">Cheap Flights <img src="IMG/icon/planes.png" alt=""></h1>
+
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a href="Inicio.html" class="nav-link active" aria-current="page">Inicio</a>
@@ -32,9 +34,7 @@
         <li class="nav-item">
             <a href="Contactenos.html" class="nav-link">Contactenos</a>
         </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link disabled">Disabled</a>
-        </li>
+        
     </ul>
   </header>
   <main>
@@ -80,9 +80,24 @@
       </div>
     </div> 
   </main>
-  <footer>
+  <footer class="footer bg-light">
     <!-- place footer here -->
-  </footer>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <p class="footer-text">Encuentra las mejores ofertas de vuelos en nuestra página. ¡No pierdas la oportunidad de viajar por el mundo a precios increíbles!</p>
+          </div>
+          <div class="col-md-4">
+            <p class="footer-text">¡Suscríbete a nuestro boletín y mantente al tanto de nuestras promociones exclusivas!</p>
+          </div>
+          <div class="col-md-4">
+            <p class="footer-text">¿Necesitas ayuda? Contáctanos en nuestro servicio de atención al cliente disponible las 24 horas, los 7 días de la semana.</p>
+          </div>
+        </div>
+        <hr>
+        <p class="footer-copy">&copy; 2023 Cheap Flights. Todos los derechos reservados.</p>
+      </div>
+</footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
