--- a/Viajes.html
+++ b/Viajes.html
@@ -22,12 +22,12 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-          aria-expanded="false">Viajes</a>
+          aria-expanded="false">Mas</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="Viajes.html">Disponibilidad</a>
-          <a class="dropdown-item" href="#">Test</a>
+          <a class="dropdown-item" href="Viajes.html">Viajes</a>
+          <a class="dropdown-item" href="Planes.html">Planes</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Agenda</a>
+          <a class="dropdown-item" href="#">Acerca de</a>
         </div>
       </li>
       <li class="nav-item">
