--- a/Planes.html
+++ b/Planes.html
@@ -28,7 +28,7 @@
                 <a class="dropdown-item" href="Viajes.html">Viajes</a>
                 <a class="dropdown-item" href="Planes.html">Planes</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Acerca de</a>
+                <a class="dropdown-item" href="AcercaDe.html">Acerca de</a>
             </div>
         </li>
         <li class="nav-item">
@@ -41,8 +41,8 @@
     <div class="tituloViajes">
         <img src="IMG/viaje.jpg" class="img-fluid rounded-top" alt="Imagen">
         <div class="textoViajes">
-          <h1>Planes</h1>
-          <p>Conoce lugares asombrosos con nosotros</p>
+          <h1>PLANES</h1>
+          <p>CONOCE LUGARES ASOMBROSOS CON NOSOTROS</p>
         </div>
       </div>
     <div class="zonas">
