--- a/Contactenos.html
+++ b/Contactenos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Contactenos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,7 +31,7 @@
                     <a class="dropdown-item" href="Viajes.html">Viajes</a>
                     <a class="dropdown-item" href="Planes.html">Planes</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Acerca de</a>
+                    <a class="dropdown-item" href="AcercaDe.html">Acerca de</a>
                 </div>
             </li>
             <li class="nav-item">
