--- a/Inicio.html
+++ b/Inicio.html
@@ -29,7 +29,7 @@
                     <a class="dropdown-item" href="Viajes.html">Viajes</a>
                     <a class="dropdown-item" href="Planes.html">Planes</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Acerca de</a>
+                    <a class="dropdown-item" href="AcercaDe.html">Acerca de</a>
                 </div>
             </li>
             <li class="nav-item">
